--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Counter</title>
+    <title>TimeZone</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>People entered: </h1>
-    <h2 id="count-el">0</h2>
-    <button id="increment-btn" onclick="increment()">INCRIMENT</button>
-    <button id="save-btn" onclick="save()">Save</button>
-    <p id="save-el">Previous entered: </p>
+    <h1>TimeZone</h1>h1>
+    <button onclick="timeZone()">Live Time</button>
+    <p id="time"></p>
     <script src="index.js"></script>
 </body>
 </html>
