--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>TimeZone</h1>h1>
+    <h1>TimeZone</h1>
     <button onclick="timeZone()">Live Time</button>
     <p id="time"></p>
     <script src="index.js"></script>
