--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>TimeZone</h1>
-    <button id="btn" onclick="timeZone()">Live Time</button>
+    <button style="background-color: red;" onclick="timeZone()">Live Time</button>
     <p id="time"></p>
     <script src="index.js"></script>
 </body>
